--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
 	<packaging>war</packaging>
 
 	<properties>
+		<hibernate.version>4.3.1.Final</hibernate.version>
+		<mssql-jdbc.version>12.6.0.jre8</mssql-jdbc.version>
 		<sitemesh.version>2.4.2</sitemesh.version>
 		<jstl.version>1.2</jstl.version>
 		<jsp.api.version>2.2</jsp.api.version>
@@ -19,47 +21,52 @@
 
 
 	<dependencies>
-		<!-- Hibernate JPA Persistence API -->
+		<!-- Microsoft sql server -->
 		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>javax.persistence-api</artifactId>
-			<version>2.2</version>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>${mssql-jdbc.version}</version>
 		</dependency>
 
-		<!-- Hibernate Core -->
+		<!-- Hibernate -->
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.6.1.Final</version>
+			<version>${hibernate.version}</version>
 		</dependency>
-
-		<!-- Hibernate EntityManager (if needed) -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>5.6.1.Final</version>
+			<version>${hibernate.version}</version>
 		</dependency>
-
-		<!-- Hibernate Validator (if needed) -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>6.2.0.Final</version>
+			<artifactId>hibernate-c3p0</artifactId>
+			<version>${hibernate.version}</version>
 		</dependency>
-
-		<!-- HikariCP (if using connection pooling) -->
 		<dependency>
-			<groupId>com.zaxxer</groupId>
-			<artifactId>HikariCP</artifactId>
-			<version>5.0.0</version>
+			<groupId>org.hibernate.common</groupId>
+			<artifactId>hibernate-commons-annotations</artifactId>
+			<version>4.0.4.Final</version>
 		</dependency>
-
-		<!-- JDBC Driver (e.g., for PostgreSQL) -->
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.3.1</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>${hibernate.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-core</artifactId>
+			<version>2.4.3</version>
+		</dependency>
+		
+		<!-- Spring framework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
