--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 
 
 	<dependencies>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 		<!-- Microsoft sql server -->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
